--- a/package.json
+++ b/package.json
@@ -5,13 +5,19 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.13.70",
+    "@mdx-js/mdx": "^1.4.4",
+    "@mdx-js/react": "^1.4.4",
+    "@mdx-js/tag": "^0.20.3",
+    "gatsby": "^2.15.9",
     "gatsby-image": "^2.2.9",
+    "gatsby-mdx": "^1.0.0",
     "gatsby-plugin-manifest": "^2.2.5",
+    "gatsby-plugin-mdx": "^1.0.39",
     "gatsby-plugin-offline": "^2.2.6",
     "gatsby-plugin-react-helmet": "^3.1.3",
     "gatsby-plugin-sharp": "^2.2.12",
     "gatsby-source-filesystem": "^2.1.9",
+    "gatsby-transformer-json": "^2.2.7",
     "gatsby-transformer-sharp": "^2.2.6",
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
