--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@mdx-js/mdx": "^1.4.4",
     "@mdx-js/react": "^1.4.4",
     "@mdx-js/tag": "^0.20.3",
-    "gatsby": "^2.15.9",
+    "gatsby": "^2.15.28",
     "gatsby-image": "^2.2.9",
     "gatsby-mdx": "^1.0.0",
     "gatsby-plugin-manifest": "^2.2.5",
@@ -21,6 +21,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-ga": "^2.7.0",
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
@@ -37,7 +38,7 @@
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \"", 
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing \"",
     "deploy": "gatsby build && gh-pages -d public -b master"
   },
   "repository": {
